[tool.poetry]
name = "adaptive-huffman-coding"
version = "0.1.0"
description = ""
authors = ["Mihir Jichkar <j.mihir19.mj@gmail.com>", "Mohit Hisariya <mohit20010723@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bitarray = "^1.6.0"
progress = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
